# dapp-manager

./: .gitignore  .gitmodules  README.md  cli_sample_usage.sh  pyproject.toml  sample_config.yml  sample_descriptor.yml  sample_usage.py
.github/workflows/: build_publish.yml  check.yml  test.yml  unit_test.yml
dapp_manager/: __init__.py  __main__.py  cli.py  dapp_manager.py  dapp_starter.py  exceptions.py  storage.py
dapp_manager/autocomplete/: __init__.py
dapp_manager/autocomplete/scripts/: .dapp-manager.bash  .dapp-manager.fish  .dapp-manager.zsh  .dapp_manager.bash  .dapp_manager.fish  .dapp_manager.zsh
dapp_manager/inspect/: __init__.py  __main__.py
dapp_manager/inspect/templates/: app_structure.txt
dapp_manager/inspect/templates/app_structure/: network.txt  node.txt  payload.txt
dapp_manager/scripts/: close_windows_pid.py
dapp_stats/: README.md  __init__.py  __main__.py  dapp_size_resolver.py  dapp_stats.py  exceptions.py
dapp_stats/statistics/: enums.py  models.py  schemas.py
tests/: conftest.py  helpers.py  mock_status_file.txt  test_manager_api.py  test_storage.py  write_mock_files.sh
tests/assets/: mock_dapp_runner.py  mock_data_file.txt  mock_state_file.txt  sleep.py  sleep_no_sigint.py  sleep_no_sigint.sh  worker.py  worker_no_sigint.py  worker_with_log_files.py  write_mock_files.py  write_mock_files.sh
tests/assets/descriptors/: bad_validation.yaml  bad_vm_manifest_runtime_corrupted_manifest.yaml  bad_vm_manifest_runtime_without_image_url.yaml  bad_vm_manifest_runtime_without_manifest.yaml  bad_vm_runtime_not_existing_image_hash.yaml  bad_vm_runtime_without_image_hash.yaml  correct_vm_manifest_runtime_a.yaml  correct_vm_manifest_runtime_ab.yaml  correct_vm_manifest_runtime_b.yaml  correct_vm_runtime_a.yaml  correct_vm_runtime_ab.yaml  correct_vm_runtime_b.yaml  unsupported_runtime.yaml
tests/dapp_stats/: test_dapp_size_resolver.py  test_dapp_stats.py  test_models.py  test_schemas.py
yagna_dapp_manager/: __init__.py  __main__.py  dapp_manager.py  dapp_starter.py  exceptions.py  storage.py
yagna_dapp_manager/autocomplete/: __init__.py
yagna_dapp_manager/autocomplete/scripts/: .yagna_dapp_manager.bash  .yagna_dapp_manager.fish  .yagna_dapp_manager.zsh
